Enable annotation based null analysis in tm4e.registry plugin